--- a/skillio/main.html
+++ b/skillio/main.html
@@ -225,6 +225,8 @@
     <div class="category" style="background-image: url('music.png');" onclick="searchSkills('Music')">Music</div>
     <div class="category" style="background-image: url('handyman.png');" onclick="searchSkills('Handyman')">Handyman</div>
     <div class="category" style="background-image: url('babysitting.png');" onclick="searchSkills('Babysitting')">Babysitting</div>
+    <div class="category" style="background-image: url('socialmedia.png');" onclick="searchSkills('Social Media')">Social Media</div>
+    <div class="category" style="background-image: url('videoediting.png');" onclick="searchSkills('Video Editing')">Video Editing</div>
   </div>
 
   <script>
