--- a/skillio/profile.html
+++ b/skillio/profile.html
@@ -1,379 +1,293 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Skillio Calendar</title>
+  <title>Your Profile – Skillio</title>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #c9f2f5;
+      background: #c9f2f5;
       padding: 40px;
       color: #0f2027;
-      position: relative;
     }
-
-    .logo {
+    .logo-flip {
+      animation: flipLogo 2s infinite linear;
       position: absolute;
       top: 20px;
       left: 20px;
       height: 100px;
       cursor: pointer;
-      animation: flipLogo 1.5s infinite ease-in-out;
     }
-
     @keyframes flipLogo {
       0% { transform: rotateY(0deg); }
       50% { transform: rotateY(180deg); }
       100% { transform: rotateY(360deg); }
     }
-
-    h1 {
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,188,212,0.3);
+    }
+    h2 {
       text-align: center;
       color: #00bcd4;
-      margin-bottom: 10px;
-      font-size: 2rem;
     }
-
-    .sub-note {
-      text-align: center;
-      margin-bottom: 30px;
-      font-size: 1rem;
-      color: #555;
-      background: #fff3cd;
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+    input, textarea, select {
+      width: 100%;
       padding: 10px;
-      border-radius: 10px;
-      border: 1px solid #ffeeba;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      margin-top: 5px;
+      box-sizing: border-box;
+      font-size: 1rem;
     }
-
-    .calendar-controls {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-bottom: 20px;
-    }
-
-    .calendar-controls button {
-      padding: 10px 20px;
-      background-color: #00bcd4;
-      color: white;
+    button {
+      margin-top: 20px;
+      padding: 12px;
+      background: #00bcd4;
       border: none;
+      color: white;
+      font-size: 1rem;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 1rem;
-      box-shadow: 0 4px 12px rgba(0, 188, 212, 0.3);
     }
-
-    .calendar-controls button:hover {
-      background-color: #007e8a;
+    button:hover {
+      background: #0097a7;
     }
-
-    .calendar {
-      max-width: 900px;
-      margin: 0 auto;
-      background: white;
-      border-radius: 16px;
-      padding: 30px;
-      box-shadow: 0 10px 30px rgba(0, 188, 212, 0.2);
-      overflow-x: auto;
+    #preview {
+      display: block;
+      margin: 20px auto 0;
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 3px solid #00bcd4;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-
-    .calendar table {
-      width: 100%;
-      border-collapse: collapse;
-      table-layout: fixed;
-      min-width: 600px;
-    }
-
-    .calendar th,
-    .calendar td {
-      text-align: center;
-      padding: 14px;
-      border: 1px solid #e0f7fa;
-      font-size: 1.1rem;
-      position: relative;
-      vertical-align: top;
-    }
-
-    .calendar th {
-      background-color: #00bcd4;
-      color: white;
-      text-transform: uppercase;
-      font-weight: 600;
-    }
-
-    .today {
-      background-color: #007e8a;
-      color: white;
-      border-radius: 12px;
-      font-weight: bold;
-    }
-
-    .appointment {
-      background-color: #ffb74d;
-      border-radius: 12px;
-      font-weight: bold;
-    }
-
-    .rating-box {
-      margin-top: 8px;
-    }
-
-    .rating-box input[type="number"],
-    .rating-box textarea {
-      width: 100%;
-      margin-top: 5px;
-      border-radius: 6px;
-      padding: 5px;
-      border: 1px solid #ccc;
-    }
-
-    .rating-box button {
-      margin-top: 5px;
-      background-color: #00bcd4;
-      color: white;
+    .readonly {
       border: none;
-      padding: 6px 12px;
-      border-radius: 6px;
-      cursor: pointer;
+      background: none;
+      color: #333;
     }
-
-    .rating-box button:hover {
-      background-color: #007e8a;
+    .feedback-section {
+      margin-top: 30px;
+      padding-top: 20px;
+      border-top: 2px solid #eee;
     }
-
+    .stars {
+      color: #fbc02d;
+      font-size: 1.2rem;
+    }
+    .feedback-item {
+      background: #f7f9fa;
+      padding: 12px;
+      border-radius: 10px;
+      margin-bottom: 12px;
+      box-shadow: 0 1px 5px rgba(0,0,0,0.05);
+    }
     @media (max-width: 600px) {
-      body {
-        padding: 10px;
-      }
-      .calendar {
-        padding: 10px;
-        font-size: 0.95em;
-        min-width: unset;
-        overflow-x: auto;
-      }
-      .calendar table {
-        min-width: 400px;
-        font-size: 0.9em;
-      }
-      .calendar th, .calendar td {
-        padding: 6px;
-        font-size: 0.9em;
-      }
-      .calendar-controls {
-        flex-direction: column;
-        gap: 8px;
-      }
-      .calendar-controls button {
-        width: 100%;
-        font-size: 1em;
-        padding: 8px 0;
-      }
-      .logo {
-        height: 60px;
-        top: 10px;
-        left: 10px;
-      }
-      h1 {
-        font-size: 1.2rem;
-        margin-bottom: 6px;
-      }
-      .sub-note {
-        font-size: 0.95em;
-        padding: 6px;
-      }
+      body { padding: 20px; }
+      .container { padding: 20px; }
     }
   </style>
 </head>
 <body>
-  <a href="main.html"><img src="skillio logo.png" class="logo" /></a>
-  <h1>Skillio Appointment Calendar</h1>
-  <p class="sub-note">📅 All your booked swaps, sessions and events will show up here automatically.</p>
-  <div class="calendar-controls">
-    <button onclick="changeMonth(-1)">&lt; Prev</button>
-    <h2 id="monthYear"></h2>
-    <button onclick="changeMonth(1)">Next &gt;</button>
-  </div>
-  <div class="calendar">
-    <table>
-      <thead>
-        <tr>
-          <th>Sun</th><th>Mon</th><th>Tue</th><th>Wed</th><th>Thu</th><th>Fri</th><th>Sat</th>
-        </tr>
-      </thead>
-      <tbody id="calendar-body"></tbody>
-    </table>
+  <a href="main.html"><img src="skillio logo.png" alt="Skillio Logo" class="logo-flip" /></a>
+  <div class="container">
+    <h2>Skillio Profile</h2>
+    <form id="profileForm">
+      <div id="profileFields"></div>
+      <button id="editButton" type="button" style="display:none">Edit Profile</button>
+      <button id="saveButton" type="submit" style="display:none">Save Profile</button>
+    </form>
+
+    <div id="feedbackContainer" class="feedback-section" style="display: none;">
+      <h3>⭐ Feedback & Ratings</h3>
+      <div id="ratingAverage"></div>
+      <div id="feedbackList"></div>
+    </div>
   </div>
 
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCTnKPEvdxkJnn2041wT-2io3jU6D-vQrw",
-    authDomain: "skillio-b2f44.firebaseapp.com",
-    projectId: "skillio-b2f44",
-    storageBucket: "skillio-b2f44.appspot.com",
-    messagingSenderId: "883002535621",
-    appId: "1:883002535621:web:f3efb6d41389fbd91c8aac"
-  };
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCTnKPEvdxkJnn2041wT-2io3jU6D-vQrw",
+      authDomain: "skillio-b2f44.firebaseapp.com",
+      projectId: "skillio-b2f44",
+      storageBucket: "skillio-b2f44.appspot.com",
+      messagingSenderId: "883002535621",
+      appId: "1:883002535621:web:f3efb6d41389fbd91c8aac"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+    const auth = firebase.auth();
 
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  const auth = firebase.auth();
+    let isEditMode = true;
+    let currentUserId = "";
+    let viewedUserId = "";
+    let currentData = {};
 
-  const calendarBody = document.getElementById('calendar-body');
-  const monthYear = document.getElementById('monthYear');
-  const today = new Date();
-  let currentMonth = today.getMonth();
-  let currentYear = today.getFullYear();
-  let appointments = {};
-  let userId = null;
+    const skillOptions = ["Web Design", "Cooking", "Tutoring", "Fitness", "Music", "Handyman", "Babysitting", "Other"];
+    const fieldMap = [
+      { id: "name", label: "Name" },
+      { id: "description", label: "Description", type: "textarea" },
+      { id: "location", label: "Location" },
+      { id: "skillOffered", label: "Skill Offered", type: "dropdown" },
+      { id: "skillWanted", label: "Skill Wanted", type: "dropdown" },
+      { id: "customSkillOffered", label: "Custom Offered Skill" },
+      { id: "customSkillWanted", label: "Custom Wanted Skill" },
+      { id: "profilePic", label: "Profile Picture URL" },
+      { id: "isPaid", label: "Offer paid sessions", type: "checkbox" },
+      { id: "rate", label: "Hourly Rate", type: "number" },
+      { id: "isWorkshop", label: "Host workshops", type: "checkbox" },
+      { id: "workshopTitle", label: "Workshop Title" },
+      { id: "workshopPrice", label: "Price per attendee", type: "number" }
+    ];
 
-  function generateCalendar(month, year) {
-    calendarBody.innerHTML = '';
-    const firstDay = new Date(year, month, 1).getDay();
-    const daysInMonth = new Date(year, month + 1, 0).getDate();
-
-    monthYear.textContent = `${new Date(year, month).toLocaleString('default', { month: 'long' })} ${year}`;
-
-    let html = '<tr>';
-    for (let i = 0; i < firstDay; i++) {
-      html += '<td></td>';
+    function getQueryParam(param) {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get(param);
     }
 
-    for (let day = 1; day <= daysInMonth; day++) {
-      const fullDate = `${year}-${String(month + 1).padStart(2, '0')}-${String(day).padStart(2, '0')}`;
-      const isTodayOrPast = new Date(fullDate) <= today;
-      let content = `${day}`;
-      let classes = '';
-      let cellHTML = '';
+    function toggleMode(edit) {
+      isEditMode = edit;
+      document.getElementById("saveButton").style.display = edit ? "block" : "none";
+      document.getElementById("editButton").style.display = !edit && currentUserId === viewedUserId ? "block" : "none";
+    }
 
-      if (appointments[fullDate]) {
-        classes += 'appointment';
-        const app = appointments[fullDate];
+    function renderFields(data = {}) {
+      const container = document.getElementById("profileFields");
+      container.innerHTML = '';
 
-        // Check if already confirmed
-        if (app.confirmed) {
-          content += `<br/><small>Confirmed</small>`;
-        } else if (isTodayOrPast) {
-          // Only show confirm UI if not confirmed and swap is today or past
-          content += `
-            <div>
-              <label>⭐</label><br/>
-              <select id="rating-${fullDate}">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3" selected>3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-              </select><br/>
-              <textarea id="feedback-${fullDate}" placeholder="Feedback..." rows="2"></textarea><br/>
-              <button onclick="submitFeedback('${fullDate}', '${app.swapId}', false)">✅ Confirm</button>
-              <button onclick="submitFeedback('${fullDate}', '${app.swapId}', true)">❌ Incomplete</button>
-            </div>
-          `;
+      const previewImg = document.createElement("img");
+      previewImg.id = "preview";
+      previewImg.src = data.profilePic || "";
+      previewImg.style.display = data.profilePic ? "block" : "none";
+      container.appendChild(previewImg);
+
+      fieldMap.forEach(field => {
+        const label = document.createElement("label");
+        label.textContent = field.label;
+        let input;
+
+        if (field.type === "dropdown") {
+          input = document.createElement("select");
+          skillOptions.forEach(opt => {
+            const option = document.createElement("option");
+            option.value = opt;
+            option.textContent = opt;
+            if (data[field.id] === opt) option.selected = true;
+            input.appendChild(option);
+          });
+          input.addEventListener("change", () => {
+            document.getElementById("custom" + field.id.charAt(0).toUpperCase() + field.id.slice(1)).style.display = input.value === "Other" ? "block" : "none";
+          });
+        } else if (field.type === "textarea") {
+          input = document.createElement("textarea");
+          input.value = data[field.id] || "";
+        } else {
+          input = document.createElement("input");
+          input.type = field.type || "text";
+          if (field.type === "checkbox") input.checked = !!data[field.id];
+          else input.value = data[field.id] || "";
         }
-      }
 
-      if (day === today.getDate() && month === today.getMonth() && year === today.getFullYear()) {
-        classes += ' today';
-      }
+        input.id = field.id;
+        input.name = field.id;
+        if (!isEditMode) {
+          if (field.type !== "checkbox") input.readOnly = true;
+          input.disabled = true;
+          input.classList.add("readonly");
+        }
 
-      cellHTML += `<td class="${classes}">${content}</td>`;
-      html += cellHTML;
+        container.appendChild(label);
+        container.appendChild(input);
 
-      if ((day + firstDay) % 7 === 0) html += '</tr><tr>';
+        if (field.id.startsWith("custom")) {
+          input.style.display = (data[field.id.replace("custom", "").toLowerCase()] === "Other") ? "block" : "none";
+        }
+      });
     }
 
-    html += '</tr>';
-    calendarBody.innerHTML = html;
-  }
+    document.getElementById("editButton").addEventListener("click", () => {
+      toggleMode(true);
+      renderFields(currentData);
+    });
 
-  function changeMonth(offset) {
-    currentMonth += offset;
-    if (currentMonth > 11) {
-      currentMonth = 0;
-      currentYear++;
-    } else if (currentMonth < 0) {
-      currentMonth = 11;
-      currentYear--;
+    document.getElementById("profileForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const data = {};
+      fieldMap.forEach(field => {
+        const input = document.getElementById(field.id);
+        data[field.id] = field.type === "checkbox" ? input.checked : input.value;
+      });
+
+      data.userId = currentUserId;
+      await db.collection("users").doc(currentUserId).set(data);
+      alert("Profile saved");
+      currentData = data;
+      toggleMode(false);
+      renderFields(data);
+    });
+
+    function renderFeedback(feedback) {
+      const list = document.getElementById("feedbackList");
+      const avgEl = document.getElementById("ratingAverage");
+      const container = document.getElementById("feedbackContainer");
+
+      if (!feedback.length) return;
+
+      container.style.display = "block";
+      list.innerHTML = "";
+
+      const total = feedback.reduce((sum, fb) => sum + (fb.rating || 0), 0);
+      const avg = (total / feedback.length).toFixed(1);
+      const starsHTML = '★'.repeat(Math.round(avg)) + '☆'.repeat(5 - Math.round(avg));
+      avgEl.innerHTML = `<strong>Average Rating:</strong> <span class="stars">${starsHTML}</span> (${avg}/5)`;
+
+      feedback.forEach(fb => {
+        const div = document.createElement("div");
+        div.className = "feedback-item";
+        const stars = '★'.repeat(fb.rating || 0) + '☆'.repeat(5 - (fb.rating || 0));
+        div.innerHTML = `<div class="stars">${stars}</div><div>${fb.comment || ''}</div>`;
+        list.appendChild(div);
+      });
     }
-    generateCalendar(currentMonth, currentYear);
-  }
 
-  function submitFeedback(date, swapId, isIncomplete) {
-    const rating = parseInt(document.getElementById(`rating-${date}`).value);
-    const comment = document.getElementById(`feedback-${date}`).value.trim();
+    firebase.auth().setPersistence(firebase.auth.Auth.Persistence.LOCAL).then(() => {
+      auth.onAuthStateChanged(async user => {
+        if (!user) {
+          alert("You must be logged in");
+          return window.location.href = "auth.html";
+        }
+        currentUserId = user.uid;
+        const paramUid = getQueryParam("user");
+        viewedUserId = paramUid || currentUserId;
+        isEditMode = (currentUserId === viewedUserId);
+        toggleMode(isEditMode);
 
-    db.collection("swap_feedback").doc(swapId).set({
-      rating,
-      comment,
-      incomplete: isIncomplete,
-      swapId,
-      date,
-      userId,
-      timestamp: firebase.firestore.FieldValue.serverTimestamp()
-    }).then(() => {
-      appointments[date].confirmed = true;
-      generateCalendar(currentMonth, currentYear);
-      alert("Feedback submitted!");
-    }).catch(err => {
-      console.error("Feedback error:", err);
-      alert("Error submitting feedback.");
-    });
-  }
+        const doc = await db.collection("users").doc(viewedUserId).get();
+        if (doc.exists) {
+          currentData = doc.data();
+          renderFields(currentData);
+        }
 
-  function loadAppointments(uid) {
-    userId = uid;
-    const swapsRef = db.collection("swaps");
-    const feedbackRef = db.collection("swap_feedback");
-    const allSwaps = [];
-
-    Promise.all([
-      swapsRef.where("from", "==", uid).get(),
-      swapsRef.where("to", "==", uid).get()
-    ]).then(([fromSnap, toSnap]) => {
-      const allDocs = [...fromSnap.docs, ...toSnap.docs];
-      const feedbackChecks = [];
-
-      allDocs.forEach(doc => {
-        const data = doc.data();
-        const swapId = doc.id;
-        const date = data.date;
-
-        if (!date) return;
-
-        appointments[date] = {
-          swapId,
-          confirmed: false
-        };
-
-        feedbackChecks.push(
-          feedbackRef.doc(swapId).get().then(fbDoc => {
-            if (fbDoc.exists) {
-              appointments[date].confirmed = true;
-            }
-          })
-        );
-      });
-
-      Promise.all(feedbackChecks).then(() => {
-        generateCalendar(currentMonth, currentYear);
+        const feedbackSnap = await db.collection("swap_feedback").where("userId", "==", viewedUserId).get();
+        const feedbackData = feedbackSnap.docs.map(doc => doc.data());
+        renderFeedback(feedbackData);
       });
     });
-  }
-
-  auth.onAuthStateChanged(user => {
-    if (!user) return location.href = "auth.html";
-    loadAppointments(user.uid);
-  });
-
-  generateCalendar(currentMonth, currentYear);
-</script>
   </script>
 </body>
 </html>
