--- a/skillio/profile.html
+++ b/skillio/profile.html
@@ -291,44 +291,43 @@
         const feedbackSnap = await db.collection("swap_feedback").where("userId", "==", viewedUserId).get();
         const feedbackData = feedbackSnap.docs.map(doc => doc.data());
         renderFeedback(feedbackData);
+
+        // --- Follow/Message Button Logic (moved here) ---
+        let followBtn = document.getElementById('followBtn');
+        let messageBtn = document.getElementById('messageBtn');
+        let followerCount = document.getElementById('followerCount');
+        let profileUid = viewedUserId;
+        let currentUid = currentUserId;
+        if (profileUid === currentUid) {
+          followBtn.style.display = 'none';
+          messageBtn.style.display = 'none';
+          followerCount.style.display = 'none';
+        } else {
+          db.collection('users').doc(profileUid).collection('followers').onSnapshot(snap => {
+            followerCount.textContent = `Followers: ${snap.size}`;
+          });
+          async function updateFollowBtn() {
+            const doc = await db.collection('users').doc(profileUid).collection('followers').doc(currentUid).get();
+            followBtn.textContent = doc.exists ? 'Unfollow' : 'Follow';
+          }
+          updateFollowBtn();
+          followBtn.onclick = async () => {
+            const ref = db.collection('users').doc(profileUid).collection('followers').doc(currentUid);
+            const doc = await ref.get();
+            if (doc.exists) {
+              await ref.delete();
+            } else {
+              await ref.set({ timestamp: firebase.firestore.FieldValue.serverTimestamp() });
+            }
+            updateFollowBtn();
+          };
+          messageBtn.onclick = () => {
+            window.location.href = `messages.html?user=${profileUid}`;
+          };
+        }
+        // --- End Follow/Message Button Logic ---
       });
     });
-
-    // Follow/Unfollow and Message logic
-    let followBtn = document.getElementById('followBtn');
-    let messageBtn = document.getElementById('messageBtn');
-    let followerCount = document.getElementById('followerCount');
-    let profileUid = viewedUserId;
-    let currentUid = currentUserId;
-    if (profileUid === currentUid) {
-      followBtn.style.display = 'none';
-      messageBtn.style.display = 'none';
-      followerCount.style.display = 'none';
-    } else {
-      // Real-time follower count
-      db.collection('users').doc(profileUid).collection('followers').onSnapshot(snap => {
-        followerCount.textContent = `Followers: ${snap.size}`;
-      });
-      // Update follow button state
-      async function updateFollowBtn() {
-        const doc = await db.collection('users').doc(profileUid).collection('followers').doc(currentUid).get();
-        followBtn.textContent = doc.exists ? 'Unfollow' : 'Follow';
-      }
-      updateFollowBtn();
-      followBtn.onclick = async () => {
-        const ref = db.collection('users').doc(profileUid).collection('followers').doc(currentUid);
-        const doc = await ref.get();
-        if (doc.exists) {
-          await ref.delete();
-        } else {
-          await ref.set({ timestamp: firebase.firestore.FieldValue.serverTimestamp() });
-        }
-        updateFollowBtn();
-      };
-      messageBtn.onclick = () => {
-        window.location.href = `messages.html?user=${profileUid}`;
-      };
-    }
   </script>
 </body>
 </html>
