--- a/skillio/messages.html
+++ b/skillio/messages.html
@@ -64,38 +64,97 @@
     const db = firebase.firestore();
     const auth = firebase.auth();
 
+    function getQueryParam(param) {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get(param);
+    }
+
     auth.onAuthStateChanged(async user => {
       if (!user) return (window.location.href = 'auth.html');
       const currentUserId = user.uid;
       const currentUserName = user.displayName || "You";
       const conversationList = document.getElementById("conversationList");
+      const targetUserId = getQueryParam('user');
 
-      const sent = await db.collection("messages").where("from", "==", currentUserId).get();
-      const received = await db.collection("messages").where("to", "==", currentUserId).get();
-      const userIds = new Set();
-      sent.docs.forEach(doc => userIds.add(doc.data().to));
-      received.docs.forEach(doc => userIds.add(doc.data().from));
-      if (userIds.size === 0) {
-        conversationList.innerHTML = "<p>No conversations yet.</p>";
-        return;
-      }
-      conversationList.innerHTML = "";
-      userIds.forEach(async userId => {
-        const userDoc = await db.collection("users").doc(userId).get();
-        const userData = userDoc.data();
-        const userName = userData?.name || "Unknown";
-        const profilePic = userData?.profilePic || "https://i.pinimg.com/236x/08/35/0c/08350cafa4fabb8a6a1be2d9f18f2d88.jpg";
-
-        const convo = document.createElement("div");
-        convo.className = "conversation";
-        convo.innerHTML = `<img src="${profilePic}" class="profile-pic"><div><strong>${userName}</strong><br><small>Click to expand chat</small></div>`;
-        const msgDiv = document.createElement("div");
-        msgDiv.className = "messages";
-        convo.addEventListener("click", async () => {
-          if (msgDiv.style.display === "block") {
-            msgDiv.style.display = "none";
-            msgDiv.innerHTML = "";
-          } else {
+      if (targetUserId && targetUserId !== currentUserId) {
+        // Open direct conversation with target user
+        conversationList.innerHTML = '<p>Loading conversation...</p>';
+        // Fetch target user's name
+        let userName = 'Unknown User';
+        try {
+          const userDoc = await db.collection('users').doc(targetUserId).get();
+          if (userDoc.exists) userName = userDoc.data().name || 'Unknown User';
+        } catch (e) {}
+        // Fetch all messages between currentUserId and targetUserId
+        const allMsgsSnap = await db.collection("messages").orderBy("timestamp").get();
+        const msgs = allMsgsSnap.docs.map(doc => doc.data()).filter(m =>
+          (m.from === currentUserId && m.to === targetUserId) || (m.from === targetUserId && m.to === currentUserId)
+        );
+        // Render conversation
+        let convoDiv = document.createElement('div');
+        convoDiv.className = 'conversation';
+        convoDiv.innerHTML = `<strong>Conversation with ${userName}</strong>`;
+        let msgDiv = document.createElement('div');
+        msgDiv.className = 'messages';
+        msgDiv.style.display = 'block';
+        msgs.forEach(m => {
+          const sender = m.from === currentUserId ? "You" : m.fromName;
+          const line = document.createElement("div");
+          line.className = "message-line";
+          line.innerHTML = `<strong>${sender}:</strong> ${m.message}`;
+          msgDiv.appendChild(line);
+        });
+        // Reply form
+        const form = document.createElement("form");
+        form.className = "reply-box";
+        form.onsubmit = (e) => {
+          e.preventDefault();
+          const input = form.querySelector("input");
+          const text = input.value.trim();
+          if (!text) return;
+          db.collection("messages").add({
+            from: currentUserId,
+            fromName: currentUserName,
+            to: targetUserId,
+            toName: userName,
+            message: text,
+            timestamp: firebase.firestore.FieldValue.serverTimestamp()
+          }).then(() => {
+            const line = document.createElement("div");
+            line.className = "message-line";
+            line.innerHTML = `<strong>You:</strong> ${text}`;
+            msgDiv.appendChild(line);
+            input.value = "";
+          });
+        };
+        form.innerHTML = `<input type="text" placeholder="Type your message..." required /><button type="submit">Send</button>`;
+        msgDiv.appendChild(form);
+        conversationList.innerHTML = '';
+        conversationList.appendChild(convoDiv);
+        conversationList.appendChild(msgDiv);
+      } else {
+        // ... existing logic to show all conversations ...
+        const sent = await db.collection("messages").where("from", "==", currentUserId).get();
+        const received = await db.collection("messages").where("to", "==", currentUserId).get();
+        const userIds = new Set();
+        sent.docs.forEach(doc => userIds.add(doc.data().to));
+        received.docs.forEach(doc => userIds.add(doc.data().from));
+        if (userIds.size === 0) {
+          conversationList.innerHTML = "<p>No conversations yet.</p>";
+          return;
+        }
+        conversationList.innerHTML = "";
+        userIds.forEach(async userId => {
+          let userName = "Unknown User";
+          try {
+            const userDoc = await db.collection('users').doc(userId).get();
+            if (userDoc.exists) userName = userDoc.data().name || 'Unknown User';
+          } catch (e) {}
+          const convo = document.createElement("div");
+          convo.className = "conversation";
+          convo.innerHTML = `<strong>${userName}</strong>`;
+          convo.onclick = async () => {
+            // ... existing code to open conversation ...
             msgDiv.innerHTML = "<p>Loading chat...</p>";
             msgDiv.style.display = "block";
             const allMsgs = await db.collection("messages").orderBy("timestamp").get();
@@ -110,7 +169,6 @@
               line.innerHTML = `<strong>${sender}:</strong> ${m.message}`;
               msgDiv.appendChild(line);
             });
-
             const form = document.createElement("form");
             form.className = "reply-box";
             form.onsubmit = (e) => {
@@ -129,13 +187,12 @@
                 const line = document.createElement("div");
                 line.className = "message-line";
                 line.innerHTML = `<strong>You:</strong> ${text}`;
-                msgDiv.insertBefore(line, form);
+                msgDiv.appendChild(line);
                 input.value = "";
               });
             };
             form.innerHTML = `<input type="text" placeholder="Type your message..." required /><button type="submit">Send</button>`;
             msgDiv.appendChild(form);
-
             const swapButton = document.createElement("button");
             swapButton.className = "swap-button";
             swapButton.textContent = "Set Up Swap";
@@ -157,16 +214,18 @@
               alert("Swap created and synced to your calendar.");
             };
             msgDiv.appendChild(swapButton);
-          }
+          };
+          const msgDiv = document.createElement("div");
+          msgDiv.className = "messages";
+          msgDiv.style.display = "none";
+          conversationList.appendChild(convo);
+          conversationList.appendChild(msgDiv);
         });
-        conversationList.appendChild(convo);
-        conversationList.appendChild(msgDiv);
-      });
+      }
     });
   </script>
 </body>
 </html>
-
 
 
 
