--- a/skillio/profile.html
+++ b/skillio/profile.html
@@ -110,6 +110,7 @@
     <div style="display:flex;gap:10px;align-items:center;margin-bottom:10px;">
       <button id="followBtn">Follow</button>
       <button id="messageBtn">Message</button>
+      <button id="bookmarkBtn" style="background:none;border:none;font-size:1.5em;cursor:pointer;">⭐</button>
       <span id="followerCount"></span>
     </div>
     <form id="profileForm">
@@ -295,14 +296,32 @@
         // --- Follow/Message Button Logic (moved here) ---
         let followBtn = document.getElementById('followBtn');
         let messageBtn = document.getElementById('messageBtn');
+        let bookmarkBtn = document.getElementById('bookmarkBtn');
         let followerCount = document.getElementById('followerCount');
         let profileUid = viewedUserId;
         let currentUid = currentUserId;
         if (profileUid === currentUid) {
           followBtn.style.display = 'none';
           messageBtn.style.display = 'none';
+          bookmarkBtn.style.display = 'none';
           followerCount.style.display = 'none';
         } else {
+          // Bookmark functionality
+          async function updateBookmarkBtn() {
+            const doc = await db.collection('users').doc(currentUid).collection('bookmarks').doc(profileUid).get();
+            bookmarkBtn.textContent = doc.exists ? '★' : '☆';
+          }
+          updateBookmarkBtn();
+          bookmarkBtn.onclick = async () => {
+            const ref = db.collection('users').doc(currentUid).collection('bookmarks').doc(profileUid);
+            const doc = await ref.get();
+            if (doc.exists) {
+              await ref.delete();
+            } else {
+              await ref.set({ timestamp: firebase.firestore.FieldValue.serverTimestamp() });
+            }
+            updateBookmarkBtn();
+          };
           db.collection('users').doc(profileUid).collection('followers').onSnapshot(snap => {
             followerCount.textContent = `Followers: ${snap.size}`;
           });
